--- a/com.ghostery.browser.yml
+++ b/com.ghostery.browser.yml
@@ -33,7 +33,7 @@ finish-args:
 - "--env=MOZ_USE_XINPUT2=1"
 - "--own-name=org.mpris.MediaPlayer2.firefox.*"
 modules:
-- shared-modules/dbus-glib/dbus-glib-0.110.json
+- shared-modules/dbus-glib/dbus-glib.json
 - name: gtk-cups-backend
   buildsystem: meson
   make-args:
